fix position on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,7 @@ body {
   .swiper-slide {
     // set the default height of the slider component (minus the height of the navigation dots and thumbs)
     height: 325px;
+    cursor: pointer;
   }
 }
 
@@ -66,7 +67,6 @@ body {
 .swiper-thumbs {
   .swiper-wrapper {
     .swiper-slide {
-      cursor: pointer;
       border: 2px solid #ADADAD;
       width: 48px;
       height: 48px;
@@ -84,7 +84,6 @@ body {
 }
 
 // pagination active but not displayed on desktop
-
 .swiper-pagination {
   display: none;
   &.swiper-pagination-bullets.swiper-pagination-horizontal {
@@ -135,7 +134,7 @@ body {
 
 .swiper-thumbs-custom {
   margin-top: 10px;
-  display: flex;
+  //display: flex;
   position: relative;
   .swiper-slide-thumb-video {
     flex-shrink: 0;
@@ -197,7 +196,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
 
   .dialog {
     border-radius: 0.5rem;
@@ -210,10 +208,17 @@ body {
     overflow: hidden;
     filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.4)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
 
+    .swiper-thumbs-custom {
+      position: absolute;
+      bottom: 24px;
+      width: 100%;
+    }
+
     @media screen and (max-width: 768px) {
+      position: fixed;
       padding: 0;
-      width: 100vw;
-      height: calc(var(--vh, 1vh) * 100);
+      inset: 0;
+      height: 100%;
       border-radius: 0;
     }
 
